fixes, and given up on mobile blank search bug

--- a/demos/permanent/StickyNotesLite/styles.css
+++ b/demos/permanent/StickyNotesLite/styles.css
@@ -101,6 +101,7 @@ textarea {
     box-sizing: border-box;
     user-select: none;
     background-color: transparent;
+    box-shadow: inset 0 0 0 var(--debug-outline) orange;
 }
 
 .note-container.expanded {
@@ -190,12 +191,15 @@ textarea {
 }
 
 .note-title {
+    padding: 0px;
     padding-right: 18px;
+    height: auto;
     box-sizing: border-box;
     box-shadow: inset 0 0 0 var(--debug-outline) orange;
     font-size: 16px;
-    -webkit-text-autocorrect: none;
-    -webkit-user-modify: read-write-plaintext-only;
+    display: inline-block;
+    /* -webkit-text-autocorrect: none;
+    -webkit-user-modify: read-write-plaintext-only; */
     margin: 0px 0px 8px 0px;
     box-shadow: inset 0 -1px grey;
 }
@@ -209,6 +213,7 @@ textarea {
 .note-content {
     font-size: 10px;
     flex-grow: 1;
+    box-sizing: border-box;
     overflow-y: auto;
     -webkit-text-autocorrect: none;
     -webkit-user-modify: read-write-plaintext-only;
